# internal/books/handler.go
@@ -25,9 +25,20 @@ func (h *Handler) RegisterRoutes(router *http.ServeMux) {
 	router.HandleFunc("GET /books/{id}", h.handleGetBookById)
 	router.HandleFunc("POST /books/{id}/items", h.handleCreateBookItem)
 	router.HandleFunc("GET /books/{id}/items", h.handleGetBookItems)
-	router.HandleFunc("GET /books/{bookId}/items/{itemId}", h.handleGetBookItemById)
+
 }
 
+// handleGetBookById godoc
+// @Summary Get a book by ID
+// @Description Retrieves a book by its ID
+// @Tags books
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Book ID"
+// @Success 200 {object} types.Book
+// @Failure 404 {object} types.APIError
+// @Failure 500 {object} types.APIError
+// @Router /books/{id} [get]
 func (h *Handler) handleGetBookById(w http.ResponseWriter, r *http.Request) {
 	id := r.PathValue("id")
 
@@ -44,17 +55,27 @@ func (h *Handler) handleGetBookById(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, book)
 }
 
+// handleGetBooks godoc
+// @Summary Get books with filters
+// @Description Retrieves a list of books with optional filters
+// @Tags books
+// @Accept  json
+// @Produce  json
+// @Param title query string false "Filter by title"
+// @Param author query string false "Filter by author"
+// @Param isbn query string false "Filter by ISBN"
+// @Success 200 {array} types.Book
+// @Failure 500 {object} types.APIError
+// @Router /books [get]
 func (h *Handler) handleGetBooks(w http.ResponseWriter, r *http.Request) {
 	queryParams := r.URL.Query()
-
-	filter := make(map[string]string)
-
-	filter["title"] = queryParams.Get("title")
-	filter["author"] = queryParams.Get("author")
-	filter["isbn"] = queryParams.Get("isbn")
+	filter := map[string]string{
+		"title":  queryParams.Get("title"),
+		"author": queryParams.Get("author"),
+		"isbn":   queryParams.Get("isbn"),
+	}
 
 	books, err := h.repository.GetBooks(filter)
-
 	if err != nil {
 		log.Printf("error on GetBooks %v", err)
 		utils.WriteError(w, http.StatusInternalServerError, err)
@@ -63,6 +84,17 @@ func (h *Handler) handleGetBooks(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, books)
 }
 
+// handleCreateBook godoc
+// @Summary Create a new book
+// @Description Adds a new book to the library system
+// @Tags books
+// @Accept  json
+// @Produce  json
+// @Param book body types.CreateBookPayload true "Book details"
+// @Success 201
+// @Failure 400 {object} types.APIError
+// @Failure 500 {object} types.APIError
+// @Router /books [post]
 func (h *Handler) handleCreateBook(w http.ResponseWriter, r *http.Request) {
 	log.Print("handleCreateBook")
 	var payload types.CreateBookPayload
@@ -96,9 +128,20 @@ func (h *Handler) handleCreateBook(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusCreated, nil)
 }
 
+// handleCreateBookItem godoc
+// @Summary Create a book item
+// @Description Adds a new book item to a book
+// @Tags books
+// @Accept  json
+// @Produce  json
+// @Param bookItem body types.CreateBookItemPayload true "Book item details"
+// @Param id path string true "Book ID"
+// @Success 201
+// @Failure 400 {object} types.APIError
+// @Failure 500 {object} types.APIError
+// @Router /books/{id}/items [post]
 func (h *Handler) handleCreateBookItem(w http.ResponseWriter, r *http.Request) {
 	log.Print("handleCreateBookItem")
-
 	var payload types.CreateBookItemPayload
 
 	err := utils.ParseJson(r, &payload)
@@ -115,20 +158,17 @@ func (h *Handler) handleCreateBookItem(w http.ResponseWriter, r *http.Request) {
 	}
 
 	err = uuid.Validate(payload.BookId)
-
 	if err != nil {
 		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid bookId"))
 		return
 	}
 
 	book, err := h.repository.GetBookById(payload.BookId)
-
 	if err != nil {
 		log.Printf("error on GetBookById %v", err)
 		utils.WriteError(w, http.StatusInternalServerError, err)
 		return
 	}
-
 	if book == nil {
 		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid bookId"))
 		return
@@ -149,11 +189,20 @@ func (h *Handler) handleCreateBookItem(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusCreated, nil)
 }
 
+// handleGetBookItems godoc
+// @Summary Get items of a book
+// @Description Retrieves all items belonging to a book by its ID
+// @Tags books
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Book ID"
+// @Success 200 {array} types.BookItem
+// @Failure 500 {object} types.APIError
+// @Router /books/{id}/items [get]
 func (h *Handler) handleGetBookItems(w http.ResponseWriter, r *http.Request) {
 	bookId := r.PathValue("id")
 
 	bookItems, err := h.repository.GetBookItemsByBookId(bookId)
-
 	if err != nil {
 		log.Printf("error on GetBookItemsByBookId %v", err)
 		utils.WriteError(w, http.StatusInternalServerError, err)
@@ -162,6 +211,18 @@ func (h *Handler) handleGetBookItems(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, bookItems)
 }
 
+// handleGetBookItemById godoc
+// @Summary Get a book item by ID
+// @Description Retrieves a specific book item by its ID
+// @Tags books
+// @Accept  json
+// @Produce  json
+// @Param bookId path string true "Book ID"
+// @Param itemId path string true "Book Item ID"
+// @Success 200 {object} types.BookItem
+// @Failure 404 {object} types.APIError
+// @Failure 500 {object} types.APIError
+// @Router /books/{bookId}/items/{itemId} [get]
 func (h *Handler) handleGetBookItemById(w http.ResponseWriter, r *http.Request) {
 	itemId := r.PathValue("itemId")
 
